# ChangeLog for app-misc/cl-office-meta
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-office-meta-11.15 (07 Mar 2012)

  07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.12.ebuild, +cl-office-meta-11.15.ebuild:
  version bump

*cl-office-meta-11.12 (05 Dec 2011)

  05 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.9.ebuild, +cl-office-meta-11.12.ebuild:
  version bump

*cl-office-meta-11.9 (20 Sep 2011)

  20 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.6.ebuild, +cl-office-meta-11.9.ebuild:
  version bump

*cl-office-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.3.ebuild, +cl-office-meta-11.6.ebuild:
  Version bump.

*cl-office-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.0-r7.ebuild, +cl-office-meta-11.3.ebuild:
  Version bump.

*cl-office-meta-11.0-r7 (10 Feb 2011)

  10 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.0-r6.ebuild, +cl-office-meta-11.0-r7.ebuild:
  libreoffice replaced openoffice

*cl-office-meta-11.0-r3 (23 Jan 2011)

  23 Jan 2011; Трацевский Александр <alex@gentoo.org>
  -cl-office-meta-11.0-r2.ebuild, +cl-office-meta-11.0-r3.ebuild:
  Replace app-editors/mousepad to app-editors/leafpad

*cl-office-meta-11.0-r1 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-office-meta-11.0.ebuild, +cl-office-meta-11.0-r1.ebuild:
  Renamed USE flag to CDISTRO.

*cl-office-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-office-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
