@@ -1,2 +1,2 @@
-EBUILD cl-office-meta-11.15.ebuild 1313 RMD160 445cef37e7e54dedf741c92b414ab53a2bd7d1af SHA1 1efde782356ce86ed509129665e32f986078af53 SHA256 918c1b8989b386688d6d794a9ff9715f1958d311e59637d7b227ff7cdb08713c
-MISC ChangeLog 1829 RMD160 88ec300be6b2180653f31f8b718e00992c0bfb51 SHA1 d7984de0390e1e930d236de65e7eaf5b4ee47cd0 SHA256 440918f21f370740faa17a79f992534463cede34a746d6046392774455095794
+EBUILD cl-office-meta-11.15-r1.ebuild 1319 RMD160 70e46aba60db623934b1a603a4c7d7a1dc4e7d9f SHA1 16b10d9c4b08b36c1fe84d70e9960222a2b240ce SHA256 c3a083f3a8c44106dfd953f64c97bb6d5ba8201146bd579026c6ed10d83ffc47
+MISC ChangeLog 2016 RMD160 6a665b3e438110cac3718339d1836af32c6e25f0 SHA1 d855403d9c6d104ef67a82054f39f24a3d9b22e9 SHA256 0a8345843624da2804c6baf274fa8730bdb6f8cc11e8a371906b257b05aa63f2
