@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-office-meta-11.15-r1 (17 Jun 2012)
+
+  17 Jun 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-office-meta-11.15.ebuild, +cl-office-meta-11.15-r1.ebuild:
+  remove ispell
+
 *cl-office-meta-11.15 (07 Mar 2012)
 
   07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
